fixed overflow

--- a/src/header/header.css
+++ b/src/header/header.css
@@ -8,7 +8,7 @@
 }
 
 .navbar {
-    padding-top: 49px;
+    padding-top: 2%;
     background: white;
 }
 
