--- a/src/homepage/footer/footer.css
+++ b/src/homepage/footer/footer.css
@@ -14,6 +14,8 @@
 
 .footer-socials {
     justify-content: center;
+    width: 100%;
+    display: flex;
 }
 
 .footer-socials img {
