--- a/src/homepage/homepage.css
+++ b/src/homepage/homepage.css
@@ -1,5 +1,5 @@
 .homepage-container {
-    padding-top: 50px;
+    padding-top: 6%;
     height: 100vh;
     width: 100vw;
 }
@@ -11,8 +11,8 @@
 }
 
 .homepage-container .section-one .section-one-column-one img {
-    max-width: 445px;
-    max-height: 445px;
+    max-width: 415px;
+    max-height: 415px;
 }
 
 .section-one-image {
@@ -115,6 +115,8 @@
 
 .mobile-homepage-container .row {
     margin-left: 0;
+    padding-left: 0;
+    margin-right: 0;
 }
 
 .mint-input-arrows {
@@ -124,7 +126,7 @@
 
 .mint-input-container {
     justify-content: center;
-    margin-bottom: 30px;
+    margin-bottom: 0;
 }
 
 .mint-input-container .form-control {
