--- a/src/homepage/timeline/timeline.css
+++ b/src/homepage/timeline/timeline.css
@@ -192,13 +192,13 @@
 }
 
 .love-t {
-    left: -160px;
+    left: -90px;
     z-index: 1;
 }
 
 .hoodie {
-    left: -250px;
-    top: -60px;
+    left: -120px;
+    top: -90px;
     z-index: 0;
 }
 
@@ -260,8 +260,8 @@
 .vip-access-image {
     position: absolute;
     max-width: 400px;
-    left: -310px;
-    top: -80px;
+    left: -180px;
+    top: -190px;
 }
 
 .what-else-image {
@@ -392,16 +392,16 @@
 
 .timeline-mark-image {
     position: absolute;
-    bottom: -1090px;
-    max-width: 1100px;
+    bottom: -590px;
+    max-width: 700px;
     right: 0;
 }
 
 .timeline-mark-image-two {
     position: absolute;
-    top: -110px;
-    max-width: 1100px;
-    left: -440px;
+    top: 250px;
+    max-width: 700px;
+    left: -350px;
     transform: rotate(72deg);
 }
 
